feat: support international purchase workbook imports